CU17 hasta la cu28 listo la innovacion no funciona